[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/bubble_5.png" type="Texture" id=1]
[ext_resource path="res://Boid.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.968992 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.184211, 0.507955 ), 0.0, 0.0, 0, 0, Vector2( 0.993421, 0.00795448 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 1.0
flag_disable_z = true
gravity = Vector3( 0, -30, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="Boid" type="Area2D" groups=[
"boid",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -8, 16, 0, -8, 8 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 16, 0, -8, -8, -8, 8 )

[node name="Perception" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Perception"]
polygon = PoolVector2Array( 0, 0, 0, 0, -32, -32, 0, -48, 32, -40, 48, -24, 48, -24, 56, -8, 56, 8, 48, 24, 32, 40, 0, 48, -32, 32 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.3, 0.3 )
lifetime = 2.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="Vision" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Vision"]
rotation = -0.349066
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="Vision"]
rotation = -0.698132
enabled = true

[node name="RayCast2D3" type="RayCast2D" parent="Vision"]
rotation = -1.0472
enabled = true

[node name="RayCast2D4" type="RayCast2D" parent="Vision"]
rotation = -1.39626
enabled = true

[node name="RayCast2D5" type="RayCast2D" parent="Vision"]
rotation = -1.74533
enabled = true

[node name="RayCast2D6" type="RayCast2D" parent="Vision"]
rotation = -2.0944
enabled = true

[node name="RayCast2D7" type="RayCast2D" parent="Vision"]
rotation = -2.44346
enabled = true

[node name="RayCast2D8" type="RayCast2D" parent="Vision"]
rotation = -2.79253
enabled = true

[connection signal="body_entered" from="." to="." method="_on_Boid_body_entered"]
[connection signal="area_entered" from="Perception" to="." method="_on_Perception_area_entered"]
[connection signal="area_exited" from="Perception" to="." method="_on_Perception_area_exited"]
